force-app/main/default/objects/JMS_Integration_Setting__c/JMS_Integration_Setting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <label>JMS_Integration_Setting</label>
</CustomObject>