force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_FEDEX_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>giic_FEDEX_Account_Number__c</fullName>
    <label>FEDEX Account Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>