force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_FEDEX_CLIENT_SECRET__c.field-meta.xml
<CustomField>
    <fullName>giic_FEDEX_CLIENT_SECRET__c</fullName>
    <label>FEDEX CLIENT SECRET</label>
    <length>50</length>
    <type>Text</type>
</CustomField>