force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_FEDEX_Endpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>giic_FEDEX_Endpoint_URL__c</fullName>
    <label>FEDEX Endpoint URL</label>
    <length>50</length>
    <type>Text</type>
</CustomField>