force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_FEDEX_OAUTH_Endpoint__c.field-meta.xml
<CustomField>
    <fullName>giic_FEDEX_OAUTH_Endpoint__c</fullName>
    <label>FEDEX OAUTH Endpoint</label>
    <type>Url</type>
</CustomField>