force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_FEDEX_Pickup_Type__c.field-meta.xml
<CustomField>
    <fullName>giic_FEDEX_Pickup_Type__c</fullName>
    <label>FEDEX Pickup Type</label>
    <length>50</length>
    <type>Text</type>
</CustomField>