force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_PLSCLIENTKEY__c.field-meta.xml
<CustomField>
    <fullName>giic_PLSCLIENTKEY__c</fullName>
    <label>PLS CLIENT KEY</label>
    <length>100</length>
    <type>Text</type>
</CustomField>