force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_PLSCLIENTSECRET__c.field-meta.xml
<CustomField>
    <fullName>giic_PLSCLIENTSECRET__c</fullName>
    <label>PLS CLIENT SECRET</label>
    <length>100</length>
    <type>Text</type>
</CustomField>