force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_PLSEndpoint_URL__c.field-meta.xml
<CustomField>
    <fullName>giic_PLSEndpoint_URL__c</fullName>
    <label>PLS Endpoint URL</label>
    <length>100</length>
    <type>Text</type>
</CustomField>