force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_PLSOAUTHEndpoint__c.field-meta.xml
<CustomField>
    <fullName>giic_PLSOAUTHEndpoint__c</fullName>
    <label>PLS OAUTH Endpoint</label>
    <type>Url</type>
</CustomField>