force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_PLSPASSWORD__c.field-meta.xml
<CustomField>
    <fullName>giic_PLSPASSWORD__c</fullName>
    <label>PLS PASSWORD</label>
    <length>50</length>
    <type>Text</type>
</CustomField>