force-app/main/default/objects/JMS_Integration_Setting__c/fields/giic_PLSUSERNAME__c.field-meta.xml
<CustomField>
    <fullName>giic_PLSUSERNAME__c</fullName>
    <label>PLS USERNAME</label>
    <length>50</length>
    <type>Text</type>
</CustomField>